# XIII-superbot

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  clanlist-render-preview.json  clanlist-render-preview.txt  clanlist-target-message-check.json  clanlist-write-plan.json
crates/xiii-clanlist/: Cargo.toml
crates/xiii-clanlist/src/: lib.rs  steam_source.rs
crates/xiii-config/: Cargo.toml
crates/xiii-config/src/: env.rs  lib.rs  model.rs  redaction.rs  validation.rs
crates/xiii-core/: Cargo.toml
crates/xiii-core/src/: ids.rs  lib.rs  module.rs  report.rs  time.rs
crates/xiii-db/: Cargo.toml
crates/xiii-db/src/: checksums.rs  legacy_verify.rs  lib.rs  sqlite.rs
crates/xiii-discipline/: Cargo.toml
crates/xiii-discipline/src/: commands.rs  config.rs  discord_io.rs  interactions.rs  lib.rs  render.rs  repository.rs  runtime.rs  state.rs  tests.rs
crates/xiii-discord/: Cargo.toml
crates/xiii-discord/src/: embeds.rs  gateway.rs  http.rs  interactions.rs  lib.rs  messages.rs  permissions.rs
crates/xiii-permissions/: Cargo.toml
crates/xiii-permissions/src/: lib.rs
crates/xiii-recruit/: Cargo.toml
crates/xiii-recruit/src/: commands.rs  config.rs  discord_io.rs  interactions.rs  lib.rs  render.rs  repository.rs  runtime.rs  state.rs  tests.rs
crates/xiii-scheduler/: Cargo.toml
crates/xiii-scheduler/src/: jobs.rs  lib.rs  loop.rs  non_overlap.rs  run_loop.rs
crates/xiii-tempvoice/: Cargo.toml
crates/xiii-tempvoice/src/: commands.rs  config.rs  discord_io.rs  interactions.rs  lib.rs  render.rs  repository.rs  runtime.rs  state.rs  tests.rs
crates/xiii-tickets/: Cargo.toml
crates/xiii-tickets/src/: commands.rs  config.rs  discord_io.rs  google.rs  interactions.rs  lib.rs  render.rs  repository.rs  runtime.rs  state.rs  tests.rs
crates/xiii-vacation/: Cargo.toml
crates/xiii-vacation/src/: commands.rs  config.rs  discord_io.rs  interactions.rs  lib.rs  render.rs  repository.rs  runtime.rs  state.rs  tests.rs
crates/xiii-voice-activity/: Cargo.toml
crates/xiii-voice-activity/src/: commands.rs  config.rs  discord_io.rs  interactions.rs  lib.rs  render.rs  repository.rs  runtime.rs  state.rs  tests.rs
docs/: ARCHITECTURE_REFACTOR_NOTES.md  CUTOVER_RUNBOOK.md  MODULE_COMPLETION_MATRIX.md
scripts/: windows-run-clanlist.ps1  windows-run-superbot.ps1
scripts/linux/: collect-vps-precutover-state.sh  install-clanlist-service.sh  install-superbot-service.sh  verify-production-layout.sh  xiii-superbot-clanlist.service.example  xiii-superbot.service.example
src/: app.rs  cli.rs  discord_retry.rs  main.rs  output.rs  report.rs  safety.rs  service_guard.rs
