[package]
name = "xiii-db"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
xiii-config = { path = "../xiii-config" }
xiii-core = { path = "../xiii-core" }
