[package]
name = "xiii-discipline"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
twilight-http = { workspace = true }
twilight-model = { workspace = true }
xiii-core = { path = "../xiii-core" }
