[package]
name = "xiii-discord"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
thiserror = { workspace = true }
twilight-gateway = { workspace = true }
twilight-http = { workspace = true }
twilight-model = { workspace = true }
xiii-core = { path = "../xiii-core" }

