[package]
name = "xiii-voice-activity"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
xiii-core = { path = "../xiii-core" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
twilight-http = { workspace = true }
twilight-model = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
